区分のcheckedをvalue=1に変更

--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
             <option value="3">埼玉</option>
         </select><br>
         区分：
-        <input type="radio" name="division" value="1">S
-        <input type="radio" name="division" value="2" checked>A
+        <input type="radio" name="division" value="1" checked>S
+        <input type="radio" name="division" value="2">A
         <input type="radio" name="division" value="3">B
         <br>
         給与：
